--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -89,16 +89,16 @@ a:after {
 }
 
 .navbar-default {
-	background-color: #3498db;
+	background-color: #7FBE3B;
 	border-color: transparent;
 }
 
 .navbar-default .navbar-brand {
-	color: white;
+	color: black;
 }
 
 .navbar-default .navbar-nav > li > a {
-	color: white;
+	color: black;
 }
 
 /* Helpers */
@@ -123,7 +123,7 @@ i {
 /* HeaderWrap */
 #headerwrap {
 	/* background: url(../img/bg01.jpg) no-repeat center top; */
-	background-color: #3498db;
+	background-color: #7FBE3B;
 	margin-top: -20px;
 	padding-top:200px;
 	background-attachment: relative;
@@ -145,7 +145,7 @@ i {
 #headerwrap h1 {
 	margin-top: 60px;
 	margin-bottom: 15px;
-	color: white;
+	color: black;
 	font-size: 45px;
 	font-weight: 300;
 	letter-spacing: 1px;
